# git-crawler

./: .gitignore  Pipfile  Procfile  README.md  config.py  config_test.py  pyproject.toml  pytest.ini  requirements-build.txt  requirements.txt
app/: __init__.py  crawler.ini  indexer.py  model.py  models.py  tasks.py  util.py
tests/: test.ini  test_app.py
tests/data/: test.ini
