[tool.poetry]
name = "git-crawler"
version = "0.1.0"
description = "index git commits"
authors = ["Li Lin <guru.lin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
Flask-SQLAlchemy = "^2.4.4"
celery = {version = "^4.4", extras = ["redis"]}
PyDriller = "^1.15.2"
flower = "^0.9.5"
python-gitlab = "^2.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
pytest-dotenv = "^0.5.2"
black = "20.8b1"
flake8 = "pytest-dependency"
pytest-dependency = "^0.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
